--- a/sito_modificato/auto-lease.html
+++ b/sito_modificato/auto-lease.html
@@ -193,7 +193,7 @@
     }
   ]
 }
-    </script></head><body class="bg-gray-50 text-gray-800">\n\nEOF
+    </script></head><body class="bg-gray-50 text-gray-800">
 
 
 
@@ -563,13 +563,13 @@
             <details id="formulaDetails">
               <summary class="cursor-pointer font-bold text-gray-800">Formulas</summary>
               <div class="mt-3 p-3 bg-white border border-gray-200 rounded-lg text-sm space-y-4">
-                <p><strong>Adjusted cap cost:</strong> C_adj = max(0, (P_sell + F_cap) - R_cap)</p>
-                <p><strong>Residual value:</strong> V_res = MSRP × (r_res / 100)</p>
-                <p><strong>Monthly depreciation:</strong> D = (C_adj - V_res) / n</p>
-                <p><strong>Finance charge (rent):</strong> F = (C_adj + V_res) × MF</p>
-                <p><strong>Base monthly payment:</strong> M_base = D + F</p>
-                <p><strong>Sales tax:</strong> monthly states T_mo = M_base × t; upfront total T_up = (M_base × n) × t; upfront price T_cap = P_sell × t</p>
-                <p><strong>Monthly with tax (if applicable):</strong> M_with = M_base + T_mo</p>
+                <p><strong>Adjusted cap cost:</strong> <span class="math">\(C_{\text{adj}} = \max\left(0, \left(P_{\text{sell}} + F_{\text{cap}}\right) - R_{\text{cap}}\right)\)</span></p>
+                <p><strong>Residual value:</strong> <span class="math">\(V_{\text{res}} = \text{MSRP} \times \frac{r_{\text{res}}}{100}\)</span></p>
+                <p><strong>Monthly depreciation:</strong> <span class="math">\(D = \frac{C_{\text{adj}} - V_{\text{res}}}{n}\)</span></p>
+                <p><strong>Finance charge (rent):</strong> <span class="math">\(F = \left(C_{\text{adj}} + V_{\text{res}}\right) \times \text{MF}\)</span></p>
+                <p><strong>Base monthly payment:</strong> <span class="math">\(M_{\text{base}} = D + F\)</span></p>
+                <p><strong>Sales tax:</strong> <span class="math">\(T_{\text{mo}} = M_{\text{base}} \times t,\ T_{\text{up}} = \left(M_{\text{base}} \times n\right) \times t,\ T_{\text{cap}} = P_{\text{sell}} \times t\)</span></p>
+                <p><strong>Monthly with tax (if applicable):</strong> <span class="math">\(M_{\text{with}} = M_{\text{base}} + T_{\text{mo}}\)</span></p>
               </div>
             </details>
             <details class="mt-3" id="citationDetails">
